language/move-lang/tests/move_check/typing/break_outside_loop.move
module M {
    foo() {
        while (true) {
            break
        };
        break
    }
}
